crates/runtime/tests/ready_state/snapshots/integration__ready_state__test_ready_state_on_registration_federated_arrow_acceleration_after_loading.snap
---
source: crates/runtime/tests/ready_state/mod.rs
expression: explain_str
---
+---------------+--------------------------------------------------------------+
| plan_type     | plan                                                         |
+---------------+--------------------------------------------------------------+
| logical_plan  | BytesProcessedNode                                           |
|               |   TableScan: federated_on_registration_arrow projection=[id] |
| physical_plan | BytesProcessedExec                                           |
|               |   SchemaCastScanExec                                         |
|               |     DataSourceExec: partitions=1, partition_sizes=[1]        |
|               |                                                              |
+---------------+--------------------------------------------------------------+
