crates/runtime/tests/ready_state/snapshots/integration__ready_state__test_ready_state_on_registration_native_cayenne_acceleration_after_loading.snap
---
source: crates/runtime/tests/ready_state/mod.rs
expression: explain_str
---
+---------------+-----------------------------------------------------------------+
| plan_type     | plan                                                            |
+---------------+-----------------------------------------------------------------+
| logical_plan  | TableScan: native_on_registration_cayenne projection=[id]       |
| physical_plan | SchemaCastScanExec                                              |
|               |   CayenneAccelerationExec: snapshots_scanned=0, files_scanned=0 |
|               |     BytesProcessedExec                                          |
|               |       DataSourceExec: partitions=1, partition_sizes=[1]         |
|               |                                                                 |
+---------------+-----------------------------------------------------------------+
