crates/runtime/tests/ready_state/snapshots/integration__ready_state__test_ready_state_on_registration_native_duckdb_acceleration_after_loading.snap
---
source: crates/runtime/tests/ready_state/mod.rs
expression: explain_str
---
+---------------+-------------------------------------------------------------------------+
| plan_type     | plan                                                                    |
+---------------+-------------------------------------------------------------------------+
| logical_plan  | TableScan: native_on_registration_duckdb projection=[id]                |
| physical_plan | SchemaCastScanExec                                                      |
|               |   CooperativeExec                                                       |
|               |     BytesProcessedExec                                                  |
|               |       DuckSqlExec sql= SELECT "id" FROM native_on_registration_duckdb   |
|               |                                                                         |
+---------------+-------------------------------------------------------------------------+
